--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "unicode-rgi-emoji-modifier-sequence",
   "version": "1.0.0",
-  "description": "The set of Unicode symbols that can serve as a base for emoji modifiers, i.e. those with the `RGI_Emoji_Modifier_Sequence` property set to `Yes`.",
+  "description": "The set of Unicode symbols that can serve as a base for emoji modifiers, i.e. those with the `RGI_Emoji_Modifier_Sequence` property.",
   "homepage": "https://github.com/tbeseda/unicode-rgi-emoji-modifier-sequence",
   "type": "module",
   "main": "index.js",
